Update Aikar's MC Java launch flags
Signed-off-by: Byron Marohn <combustible@live.com>